--- a/hdfs/pom.xml
+++ b/hdfs/pom.xml
@@ -10,7 +10,8 @@
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>streaming-soak</artifactId>
+    <groupId>com.stratio.spark</groupId>
+    <artifactId>hdfs</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     
