--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -14,6 +14,20 @@
     <artifactId>kafka</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+    </dependencies>
+
+
     <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <plugins>
