--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <properties>
         <maven.version>3.3.9</maven.version>
         <spark.version>2.1.0</spark.version>
-        <scala.version>2.11.0</scala.version>
     </properties>
 
     <prerequisites>
@@ -38,12 +37,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
-            <version>2.1.0</version>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.11</artifactId>
-            <version>2.1.0</version>
+            <version>${spark.version}</version>
         </dependency>
     </dependencies>
 </project>
