--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </licenses>
     <properties>
         <maven.version>3.3.9</maven.version>
-        <spark.version>2.1.0</spark.version>
+        <spark.version>2.2.0</spark.version>
     </properties>
 
     <prerequisites>
@@ -32,6 +32,7 @@
         <module>kafka</module>
         <module>postgres</module>
         <module>hdfs</module>
+        <module>structured-streaming</module>
     </modules>
     <dependencies>
         <dependency>
