Adapt tests for 2.2.0.4

--- a/hdfs-stratio/krb5.conf
+++ b/hdfs-stratio/krb5.conf
@@ -1,15 +1,13 @@
-[logging]
- default = FILE:/var/log/kerberos/krb5libs.log
- kdc = FILE:/var/log/kerberos/krb5kdc.log
- admin_server = FILE:/var/log/kerberos/kadmind.log
-
 [libdefaults]
- default_ccache_name = /tmp/%{uid}/krb5cc_%{uid}
  default_realm = DEMO.STRATIO.COM
  dns_lookup_realm = false
  dns_lookup_kdc = false
- udp_preference_limit = 1
+ rdns = false
+ ticket_lifetime = 24h
  renew_lifetime = 7d
+ forwardable = true
+ proxiable = true
+ default_ccache_name = FILE:/tmp/krb5cc_%{uid}
 
 [realms]
  DEMO.STRATIO.COM = {
