Changed nginx version (#9)
* New version of nginx

* Removed dynamic from master

* Added structured streaming

* Making structured-streaming compile again

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>kafka</module>
         <module>postgres</module>
         <module>hdfs</module>
+        <module>structured-streaming</module>
     </modules>
     <dependencies>
         <dependency>
